# Modbus_Proxy

./: .gitignore  CLAUDE.md  Makefile  README.md  platformio.ini  platformio.ini.tmp.54544.1758822885267
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
Documents/: Modbus-Proxy-FSD.md
Modbus_Proxy/: CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig.defaults
Modbus_Proxy/Documents/: Modbus-Proxy-FSD.md
Modbus_Proxy/main/: CMakeLists.txt  config.h  dtsu666.c  dtsu666.h  http_client.c  http_client.h  main.c  modbus_proxy.c  modbus_proxy.h  modbus_rtu.c  modbus_rtu.h  mqtt_handler.c  mqtt_handler.h  wifi_handler.c  wifi_handler.h
Modbus_Proxy/src/: README.txt  config.h  credentials.h.example  debug.h  dtsu666.h  http_ota.cpp  http_ota.h  main.cpp  modbus_proxy.cpp  modbus_proxy.h  mqtt_handler.cpp  mqtt_handler.h  mqtt_logger.cpp  mqtt_logger.h  nvs_config.cpp  nvs_config.h  test_inject.cpp  test_inject.h  wallbox_data.cpp  wallbox_data.h  web_assets.h  web_server.cpp  web_server.h  wifi_manager.cpp  wifi_manager.h
Modbus_Proxy/src_arduino/: main.cpp
Modbus_ProxyV/: platformio.ini.tmp.54544.1758793245345
Modbus_ProxyV1/: .gitignore  Modbus-Proxy-FSD.md  platformio.ini
docs/: Modbus-Proxy-FSD.md  WiFi-Tester-FSD.md  modbus-proxy-test-spec-v2.md  modbus-proxy-test-spec.md  test-results-phase2.md
include/: ModbusRTU485.h
scripts/: upload_and_monitor.ps1
src/: ModbusRTU485.cpp  config.h  credentials.h.example  dtsu666.cpp  main.cpp  modbus_proxy.cpp  modbus_proxy.h  mqtt_handler.cpp
(+39 files in other folders)
